--- a/docs/_data/tags.yml
+++ b/docs/_data/tags.yml
@@ -11,7 +11,7 @@ allowed-tags:
   - special_layouts
   - collaboration
   - news
-  - troubleshooting
+  - vision
   - doc
 
 # Copyright 2021 Google LLC
